--- a/zip/src/main/resources/static/index.html
+++ b/zip/src/main/resources/static/index.html
@@ -57,11 +57,11 @@
 
                 <div class="mb-3">
                     <label for="nome" class="form-label"><strong>Nome Completo</strong></label>
-                    <input type="text" class="form-control" id="nome" required="true">
+                    <input type="text" class="form-control" id="nome" required="true" placeholder="Informe um nome para ser cadastrado">
                 </div>
                 <div class="mb-3">
                     <label for="idade" class="form-label"><strong>Idade</strong></label>
-                    <input type="number" class="form-control" id="idade" required="true">
+                    <input type="number" class="form-control" id="idade" required="true" placeholder="Informe um idade">
                 </div>
                 <button type="button" class="btn btn-outline-info" onclick="salvarUsuario()" id="cadastrar">Cadastrar
                 </button>
@@ -95,6 +95,42 @@
     </div>
 </div>
 
+<div class="modal fade" id="editarUsuario" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Editar Usuário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+
+                    <div class="alert alert-danger" role="alert" hidden id="alertaEditar">
+                        Erro ao carregar informações do usuário !
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="idUsuario" class="form-label"><strong>Id</strong></label>
+                        <input type="number" class="form-control" readonly="readonly" id="idUsuario">
+                    </div>
+                    <div class="mb-3">
+                        <label for="nomeEditar" class="form-label"><strong>Nome Completo</strong></label>
+                        <input type="text" class="form-control" id="nomeEditar" required="true" placeholder="Informe um nome para ser cadastrado">
+                    </div>
+                    <div class="mb-3">
+                        <label for="idadeEditar" class="form-label"><strong>Idade</strong></label>
+                        <input type="number" class="form-control" id="idadeEditar" required="true" placeholder="Informe um idade">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-warning">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
 
     window.onload = function () {
@@ -107,7 +143,7 @@
 
                 for(var i = 0; i <= response.length; i++) {
 
-                    $('#tabelaUsuarios > tbody').append('<tr><td>'+ response[i].id +'</td><td>'+ response[i].nome +'</td><td>'+ response[i].idade +'</td><td><a onclick="editarUsuario()" type="button"> <span class="material-icons orange">edit</span></a></td><td><a onclick="excluirUsuario()" type="button"> <span class="material-icons danger">clear</span></a></td></tr>');
+                    $('#tabelaUsuarios > tbody').append('<tr><td>'+ response[i].id +'</td><td>'+ response[i].nome +'</td><td>'+ response[i].idade +'</td><td><a type="button" onclick="buscarUsuarioPorId(' + response[i].id + ')" data-bs-toggle="modal" data-bs-target="#editarUsuario"> <span class="material-icons orange">edit</span></a></td><td><a onclick="excluirUsuario()" type="button"> <span class="material-icons danger">clear</span></a></td></tr>');
 
                 }
 
@@ -145,8 +181,22 @@
         }
     }
 
-    function editarUsuario() {
-        alert('Editar');
+
+
+    function buscarUsuarioPorId(id) {
+    console.log(id)
+        $.ajax({
+              method: "GET",
+              url: "api/listarUsuarioId",
+              data: { id: id },
+              success: function(response) {
+                $('#idUsuario').val(response.id);
+                $('#nomeEditar').val(response.nome);
+                $('#idadeEditar').val(response.idade);
+              }
+            }).fail(function(message) {
+                document.getElementById('alertaEditar').removeAttribute("hidden");
+            })
     }
 
     function excluirUsuario(){
