--- a/zip/src/main/resources/static/index.html
+++ b/zip/src/main/resources/static/index.html
@@ -150,7 +150,7 @@
               success: function(response) {
                 $('#tabelaUsuarios > tbody > tr').remove();
 
-                for(var i = 0; i <= response.length; i++) {
+                for(var i = 0; i < response.length; i++) {
 
                     $('#tabelaUsuarios > tbody').append('<tr><td>'+ response[i].id +'</td><td>'+ response[i].nome +'</td><td>'+ response[i].idade +'</td><td><a type="button" onclick="buscarUsuarioPorId(' + response[i].id + ')" data-bs-toggle="modal" data-bs-target="#editarUsuarioModal"> <span class="material-icons orange">edit</span></a></td><td><a onclick="excluirUsuario()" type="button"> <span class="material-icons danger">clear</span></a></td></tr>');
 
