--- a/zip/src/main/resources/static/index.html
+++ b/zip/src/main/resources/static/index.html
@@ -61,6 +61,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
+                <div class="alert alert-success alert-dismissible fade show" role="alert" hidden id="excluido">
+                    Usuário <strong>Excluido</strong> com Sucesso !
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+
                 <div class="mb-3">
                     <label for="nome" class="form-label"><strong>Nome Completo</strong></label>
                     <input type="text" class="form-control" id="nome" required="true" placeholder="Informe um nome para ser cadastrado">
@@ -81,7 +86,7 @@
                     <input type="text" class="form-control" id="pesquisar" required="true"
                            placeholder="Informe um nome para ser pesquisado"></div>
                 <div class="col-12 col-md-2 d-flex align-items-end mt-2">
-                    <button class="btn btn-dark">Pesquisar</button>
+                    <button class="btn btn-dark" onclick="pesquisarPorNome()">Pesquisar</button>
                 </div>
             </div>
             <table class="table table-borderless table-hover table-responsive align-middle" id="tabelaUsuarios">
@@ -105,7 +110,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Editar Usuário</h5>
+                <h5 class="modal-title">Editar Usuário</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -129,7 +134,26 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-warning" onclick="editarUsuario()">Salvar</button>
+                <button type="button" class="btn btn-warning" onclick="editarUsuario()" data-bs-dismiss="modal">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="excluirUsuarioModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Excluir Usuário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <input type="number" class="form-control" readonly="readonly" id="idUsuarioExcluir" hidden>
+                <h6 id="text-excluir"></h6>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger" onclick="excluirUsuario()" data-bs-dismiss="modal">Excluir</button>
             </div>
         </div>
     </div>
@@ -141,6 +165,7 @@
 
         carregaTabela();
 
+
     }
 
     function carregaTabela() {
@@ -150,9 +175,9 @@
               success: function(response) {
                 $('#tabelaUsuarios > tbody > tr').remove();
 
-                for(var i = 0; i < response.length; i++) {
+                for(const element of response) {
 
-                    $('#tabelaUsuarios > tbody').append('<tr><td>'+ response[i].id +'</td><td>'+ response[i].nome +'</td><td>'+ response[i].idade +'</td><td><a type="button" onclick="buscarUsuarioPorId(' + response[i].id + ')" data-bs-toggle="modal" data-bs-target="#editarUsuarioModal"> <span class="material-icons orange">edit</span></a></td><td><a onclick="excluirUsuario()" type="button"> <span class="material-icons danger">clear</span></a></td></tr>');
+                    $('#tabelaUsuarios > tbody').append('<tr><td>'+ element.id +'</td><td>'+ element.nome +'</td><td>'+ element.idade +'</td><td><a type="button" onclick="preencherModalEditar(' + element.id + ')" data-bs-toggle="modal" data-bs-target="#editarUsuarioModal"> <span class="material-icons orange">edit</span></a></td><td><a type="button"  onclick="preencherModalExcluir(' + element.id + ')" data-bs-toggle="modal" data-bs-target="#excluirUsuarioModal"> <span class="material-icons danger">clear</span></a></td></tr>');
 
                 }
 
@@ -160,6 +185,25 @@
             }).fail(function(message) {
                 document.getElementById('alerta').removeAttribute("hidden");
                 document.getElementById('alerta').innerHTML = "Erro ao listar todos os usuários";
+            })
+    }
+
+    function pesquisarPorNome() {
+        var nome = $('#pesquisar').val()
+
+        $.ajax({
+              method: "GET",
+              url: "api/buscarPorNome",
+              data: "nome=" + nome,
+              success: function(response) {
+                $('#tabelaUsuarios > tbody > tr').remove();
+                    for(const element of response) {
+                        $('#tabelaUsuarios > tbody').append('<tr><td>'+ element.id +'</td><td>'+ element.nome +'</td><td>'+ element.idade +'</td><td><a type="button" onclick="preencherModalEditar(' + element.id + ')" data-bs-toggle="modal" data-bs-target="#editarUsuarioModal"> <span class="material-icons orange">edit</span></a></td><td><a type="button"  onclick="preencherModalExcluir(' + element.id + ')" data-bs-toggle="modal" data-bs-target="#excluirUsuarioModal"> <span class="material-icons danger">clear</span></a></td></tr>');
+                    }
+              }
+            }).fail(function(message) {
+                document.getElementById('alerta').removeAttribute("hidden");
+                document.getElementById('alerta').innerHTML = "Erro ao pesquisar usuários";
             })
     }
 
@@ -180,6 +224,7 @@
               success: function(response) {
                 document.getElementById('alerta').setAttribute("hidden", "hidden");
                 document.getElementById('salvo').removeAttribute("hidden");
+                carregaTabela();
                 formCadastroUser.reset();
               }
             }).fail(function(message) {
@@ -191,7 +236,7 @@
 
 
 
-    function buscarUsuarioPorId(id) {
+    function preencherModalEditar(id) {
         $.ajax({
               method: "GET",
               url: "api/listarUsuarioId",
@@ -200,6 +245,21 @@
                 $('#idUsuario').val(response.id);
                 $('#nomeEditar').val(response.nome);
                 $('#idadeEditar').val(response.idade);
+              }
+            }).fail(function(message) {
+                document.getElementById('alertaEditar').removeAttribute("hidden");
+                document.getElementById('alertaEditar').innerHTML = "Erro ao carregas informações do usuário ";
+            })
+    }
+
+    function preencherModalExcluir(id) {
+        $.ajax({
+              method: "GET",
+              url: "api/listarUsuarioId",
+              data: { id: id },
+              success: function(response) {
+              $('#idUsuarioExcluir').val(response.id)
+                $('#text-excluir').html("Deseja excluir o usuário " + response.nome + " ?");
               }
             }).fail(function(message) {
                 document.getElementById('alertaEditar').removeAttribute("hidden");
@@ -219,10 +279,6 @@
               data: JSON.stringify({ id: id, nome: nome, idade: idade }),
               contentType: "application/json",
               success: function(response) {
-<!--                $('#editarUsuarioModal').modal('toggle');-->
-                $('#editarUsuarioModal').modal('hide');
-                $('body').removeClass('modal-open');
-                $('.modal-backdrop').remove();
                 carregaTabela();
                 document.getElementById('editado').removeAttribute("hidden");
               }
@@ -233,7 +289,21 @@
     }
 
     function excluirUsuario(){
-        alert('Excluir');
+
+        var id = parseInt($('#idUsuarioExcluir').val());
+
+        $.ajax({
+              method: "DELETE",
+              url: "api/deletar",
+              data: "idUser=" + id,
+              success: function(response) {
+                carregaTabela();
+                document.getElementById('excluido').removeAttribute("hidden");
+              }
+            }).fail(function(message) {
+                document.getElementById('alertaEditar').removeAttribute("hidden");
+                document.getElementById('alertaEditar').innerHTML = "Erro ao excluir usuario !";
+            })
     }
 
 </script>
